# compiler

./: CMakeLists.txt  README.md  main.cpp
include/: ASTVisitor.h  CodeGenerator.h  Lexer.h  Parser.h  SemanticAnalyzer.h
result/: assembly_result.txt  ast_result.txt  compilation_result.txt  token_stream.txt
src/: Codegen.cpp  Lexer.cpp  Parser.cpp  SemanticAnalyzer.cpp
test/: function_call.tc  p06_tail_recursion.tc  p06_tail_recursion_fixed.tc  recursion_optimized.tc  test16.tc  test16_part.tc  test_error.tc  test_fix.tc  test_function_call.tc  testlex.txt  testparse.txt
